Added time headers to main component

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,4 +1,8 @@
 $rwc-size-time-header: 3em;
 $rwc-size-day-header: 1em;
 
-$rwc-color-primary: #000000;
+$rwc-color-text: #000000;
+$rwc-color-border-strong: #000000;
+$rwc-color-border-light: rgba(#000000, 0.25);
+$rwc-color-background-primary: #fefefe;
+$rwc-color-background-secondary: rgba(#000000, 0.25);
