--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,21 +10,46 @@
   grid-auto-columns: 1fr;
   grid-auto-rows: 1fr;
 
-  border: 1px solid $rwc-color-primary;
+  z-index: 0;
+  background: $rwc-color-background-primary;
+  border: 1px solid $rwc-color-border-strong;
+
+  .ek-rwc-header {
+    z-index: 20;
+  }
 
   > .ek-rwc-header-day-container {
-    background: rgba($rwc-color-primary, 0.25);
+    background: $rwc-color-background-secondary;
+    border-bottom: 1px solid $rwc-color-border-strong;
+  }
+
+  > .ek-rwc-header-time-container {
+    border-right: 1px solid $rwc-color-border-strong;
   }
 
   > .ek-rwc-header-day {
+    border-left: 1px solid $rwc-color-border-strong;
+
+    &.first {
+      border-left: none;
+    }
+
     > .ek-rwc-header-day-default {
       margin: 0;
     }
   }
 
+  > .ek-rwc-header-time {
+    border-top: 1px solid $rwc-color-border-light;
+
+    &.first {
+      border-top: none;
+    }
+  }
+
   > .ek-rwc-grid-line-x {
-    border-top: 1px solid rgba($rwc-color-primary, 0.25);
-    z-index: -1;
+    border-top: 1px solid $rwc-color-border-light;
+    z-index: 10;
 
     &.first {
       border-top: none;
@@ -32,8 +57,8 @@
   }
 
   > .ek-rwc-grid-line-y {
-    border-left: 1px solid rgba($rwc-color-primary, 0.25);
-    z-index: -1;
+    border-left: 1px solid $rwc-color-border-light;
+    z-index: 10;
 
     &.first {
       border-left: none;
